--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -2,13 +2,14 @@ certifi==2025.7.9
 charset-normalizer==3.4.2
 click==8.1.8
 Flask==2.2.5
+flask-cors==6.0.1
 idna==3.10
 importlib-metadata==6.7.0
 itsdangerous==2.1.2
-jinja2==3.1.6
+Jinja2==3.1.6
 MarkupSafe==2.1.5
 requests==2.31.0
-typing-extensions==4.7.1
+typing_extensions==4.7.1
 urllib3==2.0.7
 Werkzeug==2.2.3
 zipp==3.15.0
